# hlda

./: README.md
PLDA/: CMakeLists.txt  data_generate.m  main.cu
PLDA/src/: CMakeLists.txt  const.h  corpus.cpp  corpus.h  document.cpp  document.h  hlda.cu  hlda.h  matrix.cu  matrix.cuh  tree.cu  tree.h  type.h  util.cpp  util.h
